--- a/go/doge-miner.html
+++ b/go/doge-miner.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/unicycle-hero.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/unicycle-hero.png">
+                            <img src="https://sudoku-online.github.io/img/unicycle-hero.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiger-simulator-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiger-simulator-3d.png">
+                            <img src="https://sudoku-online.github.io/img/tiger-simulator-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/retro-bowl.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/retro-bowl.png">
+                            <img src="https://sudoku-online.github.io/img/retro-bowl.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/pop-it-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/pop-it-master.png">
+                            <img src="https://sudoku-online.github.io/img/pop-it-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/escaping-the-prison.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/escaping-the-prison.png">
+                            <img src="https://sudoku-online.github.io/img/escaping-the-prison.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/wordle-unlimited.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/wordle-unlimited.png">
+                            <img src="https://sudoku-online.github.io/img/wordle-unlimited.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/big-shot-boxing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/big-shot-boxing.png">
+                            <img src="https://sudoku-online.github.io/img/big-shot-boxing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cat-trap.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cat-trap.png">
+                            <img src="https://sudoku-online.github.io/img/cat-trap.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/dreadhead-parkour.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/dreadhead-parkour.png">
+                            <img src="https://sudoku-online.github.io/img/dreadhead-parkour.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cubito-mayhem.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cubito-mayhem.png">
+                            <img src="https://sudoku-online.github.io/img/cubito-mayhem.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tunnel-rush.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tunnel-rush.png">
+                            <img src="https://sudoku-online.github.io/img/tunnel-rush.png">
                             <div class="product-badge">       
                             </div>
                         </div>
